# netzun_django_creando_apis

./: Pipfile  README.md
application/: .env_template  pyproject.toml
application/application/: settings.py  urls.py
application/apps/api/: urls.py  views.py
application/books/: urls.py  views.py
application/books/tests/: test_views.py
demo/: pyproject.toml
demo/apps/api/: models.py  serializers.py  urls.py  views.py
demo/demo/: settings.py  urls.py
