[tool.poetry]
name = "netzun-django-creando-apis"
version = "0.1.0"
description = "Repositorio del curso Creando APIs con Django - Nivel Avanzado"
authors = ["Carlo Alva <carlo.alva@pucp.pe>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
django-cors-headers = "^4.7.0"
django-extensions = "^4.1"
django-ninja = "^1.4.1"
environs = {extras = ["django"], version = "^14.1.1"}
setuptools = "^80.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 

[tool.pytest.ini_options]
addopts = "--cov --cov-report=html"
DJANGO_SETTINGS_MODULE = "application.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
omit = [
    "*/admin.py",
    "tests/*",
    "*/tests/*",
    "*/migrations/*",
    ".venv/*",
    "*tests*.py",
    "manage.py",
    "settings.py"
]

[tool.coverage.html]
directory = "htmlcov"
